--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "types": [
+      "react-native",
+      "react-native-config"
+    ],
     "strict": true,
     "paths": {
       "@/*": [
@@ -11,7 +15,6 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ]
+    "app"
+, "interfaces"  ]
 }
